src/objects/Costing_Quote__c/fields/Time_to_Closure_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Closure_Weekdays__c</fullName>
    <formula>ABS(

CASE(MOD (datevalue( CreatedDate)- DATE(1985,6,24),7),
0 , CASE( MOD( Datevalue( Close_Date__c ) - datevalue(CreatedDate)
,7),1,2,2,3,3,4,4,5,5,5,6,5,1)
,
1 , CASE( MOD( Datevalue( Close_Date__c ) - datevalue(CreatedDate)
,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Datevalue( Close_Date__c ) - datevalue(CreatedDate)
,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Datevalue( Close_Date__c ) - datevalue(CreatedDate)
,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Datevalue( Close_Date__c ) - datevalue(CreatedDate)
,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Datevalue( Close_Date__c ) - datevalue(CreatedDate)
,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Datevalue( Close_Date__c ) - datevalue(CreatedDate)
,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((( Datevalue(Close_Date__c) ) - ( Datevalue(CreatedDate) ) )/7)*5)-1 +

( Close_Date__c - CreatedDate) - (datevalue( Close_Date__c ) -
datevalue(CreatedDate))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time in Weekdays = Close Date/Time minus Creation Date/Time</inlineHelpText>
    <label>Time to Closure (Weekdays)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>