src/objects/Costing_Quote__c/fields/Vendor_s__c.field-meta.xml
<CustomField>
    <fullName>Vendor_s__c</fullName>
    <label>Vendor(s)</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>