src/objects/Costing_Quote__c/recordTypes/Department_Costing_Quote.recordType-meta.xml
<RecordType>
    <fullName>Department_Costing_Quote</fullName>
    <active>true</active>
    <label>Department Costing Quote</label>
</RecordType>