src/objects/Costing_Quote__c/recordTypes/Master_Costing_Quote.recordType-meta.xml
<RecordType>
    <fullName>Master_Costing_Quote</fullName>
    <active>true</active>
    <label>Master Costing Quote</label>
</RecordType>