src/objects/Costing_Quote__c/validationRules/Legacy_company_is_marlow_for_department.validationRule-meta.xml
<ValidationRule>
    <fullName>Legacy_company_is_marlow_for_department</fullName>
    <active>true</active>
    <description>if the user&apos;s legacy company is Marlow department cannot be null</description>
    <errorConditionFormula>AND(  TEXT( $User.Legacy_Company__c) = &apos;Marlow&apos;,  ISBLANK( TEXT(Department__c) ) )</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>Department cannot be null if the user&apos;s legacy company is Marlow</errorMessage>
</ValidationRule>