src/objects/Costing_Quote__c/validationRules/Quantity_Required_For_Marlow_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Required_For_Marlow_Users</fullName>
    <active>true</active>
    <description>Marlow users are required to populate Quantity</description>
    <errorConditionFormula>AND(
ISBLANK(Quantity__c),
TEXT($User.Legacy_Company__c) = &quot;Marlow&quot;
)</errorConditionFormula>
    <errorMessage>Please provide value for Quantity</errorMessage>
</ValidationRule>