src/objects/Costing_Quote__c/validationRules/Require_Manuf_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Manuf_Cap</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Closed&quot;) , ISBLANK( TEXT( Current_Manufacturing_Capability__c ) ) , NOT( ISPICKVAL( Department__c , &quot;GSC&quot;) ) ,
ISPICKVAL( $User.Legacy_Company__c, &quot;Corp II-VI&quot;))</errorConditionFormula>
    <errorDisplayField>Current_Manufacturing_Capability__c</errorDisplayField>
    <errorMessage>You must answer the Manufacturing Capability quetion prior to closing.</errorMessage>
</ValidationRule>