src/objects/Costing_Quote__c/validationRules/Require_Metrology_Answer.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Metrology_Answer</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Closed&quot;) , ISBLANK( TEXT( Current_Metrology_Set_ups__c ) ), NOT( ISPICKVAL( Department__c , &quot;GSC&quot;) ) )</errorConditionFormula>
    <errorDisplayField>Current_Metrology_Set_ups__c</errorDisplayField>
    <errorMessage>You must answer the Current Metrology Setup question prior to closing.</errorMessage>
</ValidationRule>