src/objects/Costing_Quote__c/validationRules/Require_Prod_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Prod_Process</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Closed&quot;) , ISBLANK( TEXT( Current_Production_Process__c ) ), NOT( ISPICKVAL( Department__c , &quot;GSC&quot;) ) )</errorConditionFormula>
    <errorDisplayField>Current_Production_Process__c</errorDisplayField>
    <errorMessage>You must answer the Current Production Process question.</errorMessage>
</ValidationRule>